# geometry

./: .gitignore  CMakeLists.txt  README.md
config/find_doors/: find_doors_settings.xml
config/fp_optimizer/: fp_optimizer_settings.xml
config/oct2dq/: oct2dq_settings.xml
config/octsurf/: octsurf_settings.xml
config/procarve/: procarve_settings.xml
config/scanorama/: scanorama_settings.xml
config/surface_carve/: backpackTransforms20110825Cad.bcfg  magnetoTransform_20140511_CAD.bcfg  quicksilverTransform_20141223_CAD.bcfg
docs/doxygen/: doxygen_config.conf
docs/filetypes/: carvemap_file_format.txt  chunk_file_format.txt  chunklist_file_format.txt  color_image_metadata.txt  coordmap_file_format.txt  dq_file_format.txt  example_localization_filetype.txt  fp_file_format.txt  fss_filetype.txt  hia_file_format.txt  imap_file_format.txt  levels_file_format.txt  lights_file_formats.txt  mcd_file_format.txt  noisypath_file_format.txt  octree_serialization_file.txt  octree_serialization_file_outdated.txt  people_file_formats.txt  plugloads_file_formats.txt  rectilinear_calib_dats.txt  scanolist_file_format.txt  tango_dat_filetype.txt  vox_file_format.txt  wedge_file_format.txt  windows_file_format.txt
docs/install/: required_libraries.txt
execs/: Makefile
execs/align_path/: Makefile
execs/align_path/src/: align_path_run_settings.cpp  align_path_run_settings.h  main.cpp
execs/dq_floorplan/: CMakeLists.txt  Makefile
execs/dq_floorplan/src/: main.cpp
execs/filter_pointcloud/: CMakeLists.txt  Filter.cpp  Filter.h  FindLibLAS.cmake  Makefile  Point.h  main.cpp
execs/filter_tango_scans/: Makefile
execs/filter_tango_scans/src/: filter_tango_scans_settings.cpp  filter_tango_scans_settings.h  main.cpp
execs/filter_urg_scans/: CMakeLists.txt  Makefile  main.cpp  process_scan.cpp  process_scan.h
execs/find_doors/: Makefile
execs/find_doors/src/: door_finder.cpp  door_finder.h  find_doors_settings.h  main.cpp
execs/fp2model/: CMakeLists.txt  Makefile
execs/fp2model/src/: main.cpp
execs/fp2model/src/io/: config.cpp  config.h  csv_io.cpp  csv_io.h  filetypes.cpp  filetypes.h  idf_io.cpp  idf_io.h  ply_io.cpp  ply_io.h  shp_io.cpp  shp_io.h  wrl_io.cpp  wrl_io.h
execs/fp2model/src/process/: export_data.cpp  export_data.h  parse_input.cpp  parse_input.h  subdivide_room.cpp  subdivide_room.h
execs/fp2model/src/structs/: building_model.cpp  building_model.h  floorplan.cpp  floorplan.h  floorplan_input.cpp  floorplan_output.cpp  lights.cpp  lights.h  people.cpp  people.h  plugloads.cpp  plugloads.h  window.cpp  window.h
execs/fp2model/src/util/: parameters.h  progress_bar.cpp  progress_bar.h  tictoc.h
execs/fp2model/texture/: texture.mtl
execs/fp_optimizer/: Makefile
execs/fp_optimizer/src/: fpopt_run_settings.cpp  fpopt_run_settings.h  main.cpp
execs/generate_hia/: Makefile
execs/generate_hia/src/: generate_hia_settings.cpp  generate_hia_settings.h  main.cpp
execs/generate_imap/: Makefile
execs/generate_imap/src/: image_mapping.cpp  image_mapping.h  main.cpp
execs/generate_msd/: Makefile
execs/generate_msd/src/: main.cpp
execs/generate_noisypath/: Makefile
execs/generate_noisypath/src/: main.cpp  noisypath_run_settings.cpp  noisypath_run_settings.h
execs/generate_scanorama/: Makefile
execs/generate_scanorama/src/: generate_scanorama_run_settings.cpp  generate_scanorama_run_settings.h  main.cpp
execs/generate_tex/: CMakeLists.txt  Makefile
execs/generate_tex/src/: main.cpp
execs/hia_floorplan/: Makefile
execs/hia_floorplan/src/: hia_floorplan_settings.cpp  hia_floorplan_settings.h  main.cpp
execs/merge_fp_oct/: Makefile
execs/merge_fp_oct/src/: main.cpp  merge_run_settings.cpp  merge_run_settings.h
execs/mesh2image/: Makefile
execs/mesh2image/src/: DepthMaps.cpp  DepthMaps.h  main.cpp
execs/oct2dq/: Makefile
execs/oct2dq/src/: horizontal_region_info.cpp  horizontal_region_info.h  main.cpp  oct2dq_run_settings.cpp  oct2dq_run_settings.h  process.cpp  process.h  wall_region_info.cpp  wall_region_info.h
execs/octsurf/: Makefile
execs/octsurf/src/: main.cpp  octsurf_run_settings.cpp  octsurf_run_settings.h
execs/oni2xyz/: Makefile
execs/oni2xyz/src/: log_reader.cpp  log_reader.h  main.cpp
execs/partition_pointcloud_levels/: CMakeLists.txt  Makefile
execs/partition_pointcloud_levels/src/: main.cpp
execs/pointcloud_generation/: CMakeLists.txt  FindGDAL.cmake  Makefile  main.cpp
execs/procarve/: Makefile
execs/procarve/src/: main.cpp  procarve_run_settings.cpp  procarve_run_settings.h
execs/rectify_images/: CMakeLists.txt  Makefile
execs/rectify_images/src/: main.cpp  rectify_images.cpp  rectify_images.h
execs/scan_chunker/: Makefile
execs/scan_chunker/src/: chunker_run_settings.cpp  chunker_run_settings.h  main.cpp
execs/screenshot_pointcloud/: Makefile
execs/screenshot_pointcloud/src/: main.cpp  screenshot_pointcloud.cpp  screenshot_pointcloud.h
execs/simplify_fp/: CMakeLists.txt  Point2D.h  Polygon.cpp  Polygon.h  main.cpp
execs/split_image_by_floorplan/: Makefile
execs/split_image_by_floorplan/src/: main.cpp  split_image_by_floorplan.cpp  split_image_by_floorplan.h
execs/surface_carve/: CMakeLists.txt  Makefile
execs/surface_carve/src/: main.cpp
execs/transform_model/: Makefile
execs/transform_model/src/: main.cpp  transmodel_run_settings.cpp  transmodel_run_settings.h
execs/wedge2xyz/: Makefile
execs/wedge2xyz/src/: main.cpp
execs/wedge_generator/: Makefile
execs/wedge_generator/src/: main.cpp  wedge_run_settings.cpp  wedge_run_settings.h
execs/xyz2dq/: CMakeLists.txt  Makefile
execs/xyz2dq/src/: main.cpp
execs/xyz2dq/src/io/: config.cpp  config.h  filetypes.cpp  filetypes.h  pose_io.cpp
execs/xyz2dq/src/structs/: normal.h  point.cpp  point.h  pose.cpp  pose.h  quadtree.cpp  quadtree.h
execs/xyz2dq/src/util/: error_codes.h  parameters.h
scripts/: create_models.py  generate_pointclouds.py  lidar_viewer.sh  process_tango.py  run_procarve.py
src/cpp/config/: backpackConfig.cpp  backpackConfig.h  barometerProp.cpp  barometerProp.h  cameraProp.cpp  flirProp.h  (+15 more)
(+594 files in other folders)
